Fix a typo in index.html
Signed-off-by: Michael Steinert <mike.steinert@gmail.com>

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ features (or mis-features, depending on your point of view) are included:</p>
 <li>Remove C++ code</li>
 <li>Other various improvements</li>
 </ol><p>Currently this fork should be binary-compatible with the original code. The
-only source imcompatibility is the removal of the <code>const_bstring</code> type.</p>
+only source incompatibility is the removal of the <code>const_bstring</code> type.</p>
 
 <h2>Building</h2>
 
