Update tarball link for new Github releases feature
Signed-off-by: Michael Steinert <mike.steinert@gmail.com>

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 </header>
 
 <section id="downloads" class="clearfix">
-<a href="https://s3.amazonaws.com/bstring/bstring-0.1.1.tar.gz" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
-<a href="https://github.com/msteinert/bstring" id="view-on-github" class="button"><span>View on GitHub</span></a>
+<a href="https://github.com/msteinert/bstring/releases/v0.1.1/381/bstring-0.1.1.tar.gz" id="download-tar-gz" class="button"><span>Latest Release</span></a>
+<a href="https://github.com/msteinert/bstring" id="view-on-github" class="button"><span>View Source</span></a>
 </section>
 
 <hr>
